Updated page TechDraw ExtensionCreateVertChamferDimension/fr

--- a/wiki/fr/TechDraw_ExtensionCreateVertChamferDimension.html
+++ b/wiki/fr/TechDraw_ExtensionCreateVertChamferDimension.html
@@ -1,7 +1,7 @@
 <link href="../site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">TechDraw ExtensionCreateVertChamferDimension/fr</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="fr" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="../index.php?title=Special;Translate&amp;group=page-TechDraw+ExtensionCreateVertChamferDimension&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
 <li><a href="../de/TechDraw_ExtensionCreateVertChamferDimension.html" class="mw-pt-progress mw-pt-progress--complete" title="TechDraw Erg&auml;nzungVertikalesFasenma&szlig; (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><a href="../TechDraw_ExtensionCreateVertChamferDimension.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="TechDraw ExtensionCreateVertChamferDimension (100% translated)" lang="en" dir="ltr">English</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="fr" dir="ltr">fran&ccedil;ais</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="fr" dir="ltr">fran&ccedil;ais</span></li>
 <li><a href="../it/TechDraw_ExtensionCreateVertChamferDimension.html" class="mw-pt-progress mw-pt-progress--med" title="TechDraw&#720; Quota Smusso Verticale (56% translated)" lang="it" dir="ltr">italiano</a></li>
 <li><a href="../pl/TechDraw_ExtensionCreateVertChamferDimension.html" class="mw-pt-progress mw-pt-progress--complete" title="Rysunek Techniczny: Rozszerzenie Wymiar pionowy sfazowania (100% translated)" lang="pl" dir="ltr">polski</a></li></ul></div>
 <div class="docnav">
@@ -58,14 +58,12 @@
 <p><span id="Usage"></span>
 </p>
 <h2><span class="mw-headline" id="Utilisation">Utilisation</span></h2>
-<div class="mw-translate-fuzzy">
 <ol><li>S&eacute;lectionnez deux sommets.</li>
 <li>Il existe plusieurs fa&ccedil;ons de lancer l'outil&nbsp;:
-<ul><li><span style="font-size:small;"><a href="../fr/Release_notes_1.0.html" title="Release notes 1.0/fr">introduit dans la version 1.0</a></span>&nbsp;: si la <a href="../fr/TechDraw_Preferences.html#Cotes" title="TechDraw Preferences/fr">pr&eacute;f&eacute;rence</a> <b>Outils de cotation</b> est r&eacute;gl&eacute;e sur <code>Outil unique</code> (par d&eacute;faut)&nbsp;: appuyez sur la fl&egrave;che vers le bas &agrave; droite du bouton <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;"><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=TechDraw_Dimension.svg&amp;filetimestamp=20241126214027&amp;.html" class="mw-file-description"><img src="../File/TechDraw_Dimension.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Toolbar_flyout_arrow.svg&amp;filetimestamp=20210802183935&amp;.html" class="mw-file-description"><img src="../File/Toolbar_flyout_arrow.svg" decoding="async" width="8" height="16" class="mw-file-element" data-file-width="32" data-file-height="64"></a></span></span> et s&eacute;lectionnez l'option <b><span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionCreateHorizChainDimension.svg&amp;filetimestamp=20240707201554&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionCreateHorizChainDimension.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Cotes horizontales</b> du menu d&eacute;roulant.</li>
+<ul><li><span style="font-size:small;"><a href="../fr/Release_notes_1.0.html" title="Release notes 1.0/fr">introduit dans la version 1.0</a></span>&nbsp;: si la <a href="../fr/TechDraw_Preferences.html#Cotes" title="TechDraw Preferences/fr">pr&eacute;f&eacute;rence</a> <b>Outils de cotation</b> est r&eacute;gl&eacute;e sur <code>Outil unique</code> (par d&eacute;faut)&nbsp;: appuyez sur la fl&egrave;che vers le bas &agrave; droite du bouton <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;"><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=TechDraw_Dimension.svg&amp;filetimestamp=20241126214027&amp;.html" class="mw-file-description"><img src="../File/TechDraw_Dimension.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Toolbar_flyout_arrow.svg&amp;filetimestamp=20210802183935&amp;.html" class="mw-file-description"><img src="../File/Toolbar_flyout_arrow.svg" decoding="async" width="8" height="16" class="mw-file-element" data-file-width="32" data-file-height="64"></a></span></span> et s&eacute;lectionnez l'option <b><span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionCreateVertChamferDimension.svg&amp;filetimestamp=20240706151746&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionCreateVertChamferDimension.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Cote verticale et d'angle de chanfrein</b> du menu d&eacute;roulant.</li>
 <li>Si cette pr&eacute;f&eacute;rence a une valeur diff&eacute;rente (et dans <span style="font-size:small;color:blue;">version 0.21 et pr&eacute;c&eacute;dentes</span>)&nbsp;: appuyez sur le bouton <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;"><span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionCreateVertChamferDimension.svg&amp;filetimestamp=20240706151746&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionCreateVertChamferDimension.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a class="mw-selflink selflink">Cote verticale et d'angle de chanfrein</a></span>.</li>
-<li>S&eacute;lectionnez l'option <b>TechDraw &rarr; Extensions&nbsp;: cotes &rarr; <span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionCreateVertChamferDimension.svg&amp;filetimestamp=20240706151746&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionCreateVertChamferDimension.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Cote verticale et d'angle de chanfrein</b> option du menu.</li></ul></li>
+<li>S&eacute;lectionnez l'option <b>TechDraw &rarr; Formater/organiser les cotes &rarr; <span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionCreateVertChamferDimension.svg&amp;filetimestamp=20240706151746&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionCreateVertChamferDimension.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Cote verticale et d'angle de chanfrein</b> du menu.</li></ul></li>
 <li>Une cote de chanfrein est cr&eacute;&eacute;e.</li></ol>
-</div>
 <p><br>
 </p>
 <div class="docnav">
@@ -113,35 +111,35 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260125110930
+Cached time: 20260125111004
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.089 seconds
-Real time usage: 0.130 seconds
-Preprocessor visited node count: 379/1000000
-Post&#8208;expand include size: 26805/2097152 bytes
-Template argument size: 10615/2097152 bytes
+CPU time usage: 0.107 seconds
+Real time usage: 0.148 seconds
+Preprocessor visited node count: 378/1000000
+Post&#8208;expand include size: 26836/2097152 bytes
+Template argument size: 10646/2097152 bytes
 Highest expansion depth: 6/100
 Expensive parser function count: 1/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 1408/5000000 bytes
+Unstrip post&#8208;expand size: 1412/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   33.617      1 -total
- 26.02%    8.746      1 Template:TechDraw_Tools_navi/fr
- 17.92%    6.026      2 Template:Navigation_menu_2
- 12.99%    4.367      1 Template:Value
- 11.09%    3.727      1 Template:Userdocnavi/fr
-  8.97%    3.015      2 Template:Docnav/fr
-  8.84%    2.973      1 Template:GuiCommand/fr
-  7.72%    2.595      1 Template:VersionMinus/fr
-  6.33%    2.129      1 Template:Caption
-  6.26%    2.104      1 Template:Version/fr
+100.00%   35.201      1 -total
+ 30.93%   10.886      1 Template:TechDraw_Tools_navi/fr
+ 28.45%   10.013      2 Template:Navigation_menu_2
+ 13.57%    4.777      1 Template:Userdocnavi/fr
+  9.33%    3.284      2 Template:Docnav/fr
+  9.33%    3.283      1 Template:Value
+  8.98%    3.162      2 Template:Button
+  6.76%    2.381      1 Template:GuiCommand/fr
+  5.93%    2.089      1 Template:VersionMinus/fr
+  5.44%    1.916      1 Template:Incode
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:278093-0!canonical and timestamp 20260125110930 and revision id 1743791. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:278093-0!canonical and timestamp 20260125111004 and revision id 1743794. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
