--- a/wiki/fr/TechDraw_ExtensionCreateVertChamferDimension.html
+++ b/wiki/fr/TechDraw_ExtensionCreateVertChamferDimension.html
@@ -111,12 +111,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260125111004
+Cached time: 20260125111013
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.107 seconds
-Real time usage: 0.148 seconds
+CPU time usage: 0.081 seconds
+Real time usage: 0.104 seconds
 Preprocessor visited node count: 378/1000000
 Post&#8208;expand include size: 26836/2097152 bytes
 Template argument size: 10646/2097152 bytes
@@ -127,19 +127,19 @@ Unstrip post&#8208;expand size: 1412/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   35.201      1 -total
- 30.93%   10.886      1 Template:TechDraw_Tools_navi/fr
- 28.45%   10.013      2 Template:Navigation_menu_2
- 13.57%    4.777      1 Template:Userdocnavi/fr
-  9.33%    3.284      2 Template:Docnav/fr
-  9.33%    3.283      1 Template:Value
-  8.98%    3.162      2 Template:Button
-  6.76%    2.381      1 Template:GuiCommand/fr
-  5.93%    2.089      1 Template:VersionMinus/fr
-  5.44%    1.916      1 Template:Incode
+100.00%   29.362      1 -total
+ 26.77%    7.860      1 Template:TechDraw_Tools_navi/fr
+ 18.66%    5.478      2 Template:Navigation_menu_2
+ 13.69%    4.021      1 Template:Version/fr
+  9.78%    2.873      1 Template:GuiCommand/fr
+  8.94%    2.625      2 Template:Docnav/fr
+  8.37%    2.459      1 Template:Userdocnavi/fr
+  7.70%    2.262      1 Template:VersionMinus/fr
+  7.20%    2.115      1 Template:Value
+  5.18%    1.520      1 Template:Caption
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:278093-0!canonical and timestamp 20260125111004 and revision id 1743794. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:278093-0!canonical and timestamp 20260125111013 and revision id 1743794. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
