--- a/wiki/cs/Sketcher_Preferences.html
+++ b/wiki/cs/Sketcher_Preferences.html
@@ -104,7 +104,7 @@
 <ul><li><b>Jedin&yacute; n&aacute;stroj</b>: Slou&#269;en&yacute; <a href="../Sketcher_Dimension.html" title="Sketcher Dimension">n&aacute;stroj Rozm&#283;ru</a> pro v&scaron;echny rozm&#283;rov&eacute; vazby. Samostatn&eacute; n&aacute;stroje jsou seskupeny pod n&iacute;m v rozbalovac&iacute; nab&iacute;dce.</li>
 <li><b>Odd&#283;len&eacute; n&aacute;stroje</b>: Pouze samostatn&eacute; n&aacute;stroje.</li>
 <li><b>Oboje</b>: Jak kombinovan&yacute; <a href="../Sketcher_Dimension.html" title="Sketcher Dimension">n&aacute;stroj rozm&#283;ru</a>, tak i samostatn&eacute; n&aacute;stroje.</li></ul>
-<p><i>After changing this preference you must restart FreeCAD.</i>
+<p><i>Po zm&#283;n&#283; tohoto nastaven&iacute; mus&iacute;te FreeCAD restartovat.</i>
 </p>
 </td></tr>
 <tr>
@@ -444,15 +444,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260125110931
+Cached time: 20260125111045
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.143 seconds
-Real time usage: 0.247 seconds
+CPU time usage: 0.148 seconds
+Real time usage: 0.206 seconds
 Preprocessor visited node count: 1221/1000000
-Post&#8208;expand include size: 30349/2097152 bytes
-Template argument size: 12071/2097152 bytes
+Post&#8208;expand include size: 30350/2097152 bytes
+Template argument size: 12072/2097152 bytes
 Highest expansion depth: 7/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
@@ -460,19 +460,19 @@ Unstrip post&#8208;expand size: 2254/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   77.852      1 -total
- 16.80%   13.077      1 Template:Sketcher_Tools_navi/cs
- 10.87%    8.466      1 Template:Userdocnavi/cs
- 10.24%    7.972      3 Template:PropertyView
-  8.15%    6.344     96 Template:MenuCommand
-  7.96%    6.199      2 Template:Navigation_menu_2
-  6.48%    5.044      1 Template:Value
-  5.24%    4.083      3 Template:Variable
-  4.78%    3.723      2 Template:Docnav
-  4.63%    3.604     17 Template:Version
+100.00%   65.500      1 -total
+ 19.92%   13.045      1 Template:Sketcher_Tools_navi/cs
+ 10.59%    6.936      1 Template:Value
+ 10.20%    6.679      2 Template:Navigation_menu_2
+ 10.18%    6.671      1 Template:Userdocnavi/cs
+  9.61%    6.296      3 Template:PropertyView
+  7.32%    4.792     96 Template:MenuCommand
+  5.80%    3.797      3 Template:KEY
+  4.38%    2.867      1 Template:Incode
+  4.35%    2.846      3 Template:Variable
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412213-0!canonical and timestamp 20260125110931 and revision id 1743792. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412213-0!canonical and timestamp 20260125111044 and revision id 1743796. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
