--- a/wiki/fr/TechDraw_ExtensionCreateLengthArc.html
+++ b/wiki/fr/TechDraw_ExtensionCreateLengthArc.html
@@ -1,7 +1,7 @@
 <link href="../site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">TechDraw ExtensionCreateLengthArc/fr</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="fr" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="../index.php?title=Special;Translate&amp;group=page-TechDraw+ExtensionCreateLengthArc&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
 <li><a href="../de/TechDraw_ExtensionCreateLengthArc.html" class="mw-pt-progress mw-pt-progress--complete" title="TechDraw Erg&auml;nzungBogenma&szlig; (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><a href="../TechDraw_ExtensionCreateLengthArc.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="TechDraw ExtensionCreateLengthArc (100% translated)" lang="en" dir="ltr">English</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--med" lang="fr" dir="ltr">fran&ccedil;ais</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="fr" dir="ltr">fran&ccedil;ais</span></li>
 <li><a href="../it/TechDraw_ExtensionCreateLengthArc.html" class="mw-pt-progress mw-pt-progress--med" title="TechDraw&#720; Quota lunghezza arco (56% translated)" lang="it" dir="ltr">italiano</a></li>
 <li><a href="../pl/TechDraw_ExtensionCreateLengthArc.html" class="mw-pt-progress mw-pt-progress--complete" title="Rysunek Techniczny: Rozszerzenie Dodaj wymiar d&#322;ugo&#347;ci &#322;uku (100% translated)" lang="pl" dir="ltr">polski</a></li>
 <li><a href="../ko/TechDraw_ExtensionCreateLengthArc.html" class="mw-pt-progress mw-pt-progress--med" title="&#44592;&#49696;&#46020;&#47732; &#54840; &#44600;&#51060; &#52824;&#49688; (56% translated)" lang="ko" dir="ltr">&#54620;&#44397;&#50612;</a></li></ul></div>
@@ -71,14 +71,12 @@
 </div>
 <p><br>
 </p>
-<div class="mw-translate-fuzzy">
 <div class="docnav">
-    <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-left.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <span class="mw-default-size" typeof="mw:File"><span><img src="../File/TechDraw_AreaDimension.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../fr/TechDraw_AreaDimension.html" title="TechDraw AreaDimension/fr">Cote de surface</a></div>
-    <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/TechDraw_HorizontalExtentDimension.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../fr/TechDraw_HorizontalExtentDimension.html" title="TechDraw HorizontalExtentDimension/fr">Cote &eacute;tendue horizontale</a>
+    <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-left.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <span class="mw-default-size" typeof="mw:File"><span><img src="../File/TechDraw_ExtensionCreateVertChamferDimension.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../fr/TechDraw_ExtensionCreateVertChamferDimension.html" title="TechDraw ExtensionCreateVertChamferDimension/fr">Cote verticale chanfrein</a></div>
+    <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/TechDraw_ExtensionInsertDiameter.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../fr/TechDraw_ExtensionInsertDiameter.html" title="TechDraw ExtensionInsertDiameter/fr">Diam&egrave;tre</a>
  <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-right.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span></div>
     <div><a href="../fr/TechDraw_Workbench.html" title="TechDraw Workbench/fr">Atelier TechDraw</a>
  <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Workbench_TechDraw.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span></div>
-</div>
 </div>
 <div class="NavFrame" style="margin: 0px; text-align: center; border-collapse: collapse; font-size: 100%; border-top-style: double; border-top-style: 1px; clear:both;">
     <div class="NavHead mw-collapsible mw-collapsed" style="margin: 1px; font-weight: normal; background-color: var(--background-color-neutral-subtle, #fefefe);"><span typeof="mw:File"><a href="../index.php?title=Workbench_TechDraw.svg&amp;filetimestamp=20240713144548&amp;.html" class="mw-file-description"><img src="../File/Workbench_TechDraw.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../fr/TechDraw_Workbench.html" title="TechDraw Workbench/fr">TechDraw</a>
@@ -118,35 +116,35 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260125111115
+Cached time: 20260125111121
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.097 seconds
-Real time usage: 0.184 seconds
-Preprocessor visited node count: 381/1000000
-Post&#8208;expand include size: 26425/2097152 bytes
-Template argument size: 10316/2097152 bytes
+CPU time usage: 0.095 seconds
+Real time usage: 0.196 seconds
+Preprocessor visited node count: 380/1000000
+Post&#8208;expand include size: 26524/2097152 bytes
+Template argument size: 10382/2097152 bytes
 Highest expansion depth: 6/100
 Expensive parser function count: 1/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 1523/5000000 bytes
+Unstrip post&#8208;expand size: 1524/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   56.715      1 -total
- 27.17%   15.408      1 Template:TechDraw_Tools_navi/fr
- 24.31%   13.786      2 Template:Navigation_menu_2
- 13.34%    7.566      1 Template:Value
- 11.75%    6.662      1 Template:Userdocnavi/fr
- 10.54%    5.977      2 Template:Docnav/fr
-  7.93%    4.500      1 Template:GuiCommand/fr
-  7.26%    4.119      2 Template:Button
-  6.30%    3.571      1 Template:VersionMinus/fr
-  6.08%    3.447      1 Template:Caption
+100.00%   36.475      1 -total
+ 18.22%    6.646      1 Template:TechDraw_Tools_navi/fr
+ 14.53%    5.300      2 Template:Navigation_menu_2
+ 12.88%    4.698      1 Template:Value
+ 10.76%    3.924      2 Template:Docnav/fr
+ 10.62%    3.875      1 Template:Userdocnavi/fr
+ 10.42%    3.801      1 Template:Version/fr
+  8.85%    3.227      1 Template:GuiCommand/fr
+  8.10%    2.955      1 Template:Caption
+  7.26%    2.647      1 Template:VersionMinus/fr
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:278103-0!canonical and timestamp 20260125111115 and revision id 1743798. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:278103-0!canonical and timestamp 20260125111120 and revision id 1743800. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
