--- a/wiki/fr/TechDraw_ExtensionCreateLengthArc.html
+++ b/wiki/fr/TechDraw_ExtensionCreateLengthArc.html
@@ -12,7 +12,6 @@
     <div><a href="../fr/TechDraw_Workbench.html" title="TechDraw Workbench/fr">Atelier TechDraw</a>
  <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Workbench_TechDraw.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span></div>
 </div>
-<div class="mw-translate-fuzzy">
 <table class="fcinfobox wikitable ct" width="100%" style="float: right; width: 230px; margin-left: 1em">
 <tbody><tr>
 <td class="ctTitle" style="font-weight: bold; font-size: 125%;">
@@ -23,7 +22,7 @@
 <th class="ctOdd">Emplacement du menu
 </th></tr>
 <tr>
-<td class="ctEven">TechDraw &rarr; Extensions&nbsp;: cotes &rarr; Cote de longueur d'arc
+<td class="ctEven">TechDraw &rarr; Formater/organiser les cotes &rarr; Cote de longueur d'arc
 </td></tr>
 <tr>
 <th class="ctOdd">Ateliers
@@ -52,7 +51,6 @@
 <tr>
 <td class="ctToc"><br><meta property="mw:PageProp/toc">
 </td></tr></tbody></table>
-</div>
 <h2><span class="mw-headline" id="Description">Description</span></h2>
 <p>L'outil <b>TechDraw Longueur d'arc</b> cr&eacute;e une cote de longueur d'arc.
 </p><p><span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionCreateLengthArcExample.png&amp;filetimestamp=20211121080719&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionCreateLengthArcExample.png" decoding="async" width="300" height="156" class="mw-file-element" data-file-width="587" data-file-height="306"></a></span>
@@ -116,15 +114,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260125111121
+Cached time: 20260125111305
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.095 seconds
-Real time usage: 0.196 seconds
-Preprocessor visited node count: 380/1000000
-Post&#8208;expand include size: 26524/2097152 bytes
-Template argument size: 10382/2097152 bytes
+CPU time usage: 0.088 seconds
+Real time usage: 0.180 seconds
+Preprocessor visited node count: 379/1000000
+Post&#8208;expand include size: 26544/2097152 bytes
+Template argument size: 10402/2097152 bytes
 Highest expansion depth: 6/100
 Expensive parser function count: 1/100
 Unstrip recursion depth: 0/20
@@ -132,19 +130,19 @@ Unstrip post&#8208;expand size: 1524/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   36.475      1 -total
- 18.22%    6.646      1 Template:TechDraw_Tools_navi/fr
- 14.53%    5.300      2 Template:Navigation_menu_2
- 12.88%    4.698      1 Template:Value
- 10.76%    3.924      2 Template:Docnav/fr
- 10.62%    3.875      1 Template:Userdocnavi/fr
- 10.42%    3.801      1 Template:Version/fr
-  8.85%    3.227      1 Template:GuiCommand/fr
-  8.10%    2.955      1 Template:Caption
-  7.26%    2.647      1 Template:VersionMinus/fr
+100.00%   47.527      1 -total
+ 19.04%    9.050      1 Template:TechDraw_Tools_navi/fr
+ 14.68%    6.977      1 Template:GuiCommand/fr
+ 14.14%    6.721      1 Template:VersionMinus/fr
+ 14.02%    6.662      2 Template:Navigation_menu_2
+ 13.60%    6.462      1 Template:Value
+  7.96%    3.781      1 Template:Version/fr
+  7.71%    3.666      1 Template:Incode
+  7.65%    3.637      1 Template:Userdocnavi/fr
+  7.47%    3.548      1 Template:Caption
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:278103-0!canonical and timestamp 20260125111120 and revision id 1743800. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:278103-0!canonical and timestamp 20260125111305 and revision id 1743802. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
