--- a/wiki/fr/TechDraw_ExtensionCreateLengthArc.html
+++ b/wiki/fr/TechDraw_ExtensionCreateLengthArc.html
@@ -114,12 +114,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260125111305
+Cached time: 20260125111337
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.088 seconds
-Real time usage: 0.180 seconds
+CPU time usage: 0.087 seconds
+Real time usage: 0.165 seconds
 Preprocessor visited node count: 379/1000000
 Post&#8208;expand include size: 26544/2097152 bytes
 Template argument size: 10402/2097152 bytes
@@ -130,19 +130,19 @@ Unstrip post&#8208;expand size: 1524/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   47.527      1 -total
- 19.04%    9.050      1 Template:TechDraw_Tools_navi/fr
- 14.68%    6.977      1 Template:GuiCommand/fr
- 14.14%    6.721      1 Template:VersionMinus/fr
- 14.02%    6.662      2 Template:Navigation_menu_2
- 13.60%    6.462      1 Template:Value
-  7.96%    3.781      1 Template:Version/fr
-  7.71%    3.666      1 Template:Incode
-  7.65%    3.637      1 Template:Userdocnavi/fr
-  7.47%    3.548      1 Template:Caption
+100.00%   52.571      1 -total
+ 19.67%   10.343      1 Template:TechDraw_Tools_navi/fr
+ 16.97%    8.921      2 Template:Navigation_menu_2
+ 14.02%    7.369      1 Template:Value
+ 12.58%    6.614      1 Template:Userdocnavi/fr
+  9.63%    5.064      2 Template:Docnav/fr
+  9.40%    4.944      1 Template:GuiCommand/fr
+  7.02%    3.692      1 Template:Version/fr
+  6.60%    3.471      1 Template:Incode
+  6.42%    3.373      3 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:278103-0!canonical and timestamp 20260125111305 and revision id 1743802. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:278103-0!canonical and timestamp 20260125111337 and revision id 1743802. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
