--- a/wiki/fr/TechDraw_ExtensionCreateLengthArc.html
+++ b/wiki/fr/TechDraw_ExtensionCreateLengthArc.html
@@ -15,7 +15,7 @@
 <table class="fcinfobox wikitable ct" width="100%" style="float: right; width: 230px; margin-left: 1em">
 <tbody><tr>
 <td class="ctTitle" style="font-weight: bold; font-size: 125%;">
-<p><span class="mw-default-size" typeof="mw:File"><span><img src="../File/TechDraw_ExtensionCreateLengthArc.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span><span> </span>TechDraw Longueur d'arc
+<p><span class="mw-default-size" typeof="mw:File"><span><img src="../File/TechDraw_ExtensionCreateLengthArc.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span><span> </span>TechDraw Cote de longueur d'arc
 </p>
 </td></tr>
 <tr>
@@ -114,15 +114,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260125111337
+Cached time: 20260125111342
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.087 seconds
-Real time usage: 0.165 seconds
+CPU time usage: 0.094 seconds
+Real time usage: 0.139 seconds
 Preprocessor visited node count: 379/1000000
-Post&#8208;expand include size: 26544/2097152 bytes
-Template argument size: 10402/2097152 bytes
+Post&#8208;expand include size: 26560/2097152 bytes
+Template argument size: 10418/2097152 bytes
 Highest expansion depth: 6/100
 Expensive parser function count: 1/100
 Unstrip recursion depth: 0/20
@@ -130,19 +130,19 @@ Unstrip post&#8208;expand size: 1524/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   52.571      1 -total
- 19.67%   10.343      1 Template:TechDraw_Tools_navi/fr
- 16.97%    8.921      2 Template:Navigation_menu_2
- 14.02%    7.369      1 Template:Value
- 12.58%    6.614      1 Template:Userdocnavi/fr
-  9.63%    5.064      2 Template:Docnav/fr
-  9.40%    4.944      1 Template:GuiCommand/fr
-  7.02%    3.692      1 Template:Version/fr
-  6.60%    3.471      1 Template:Incode
-  6.42%    3.373      3 Template:MenuCommand
+100.00%   38.930      1 -total
+ 21.51%    8.373      1 Template:TechDraw_Tools_navi/fr
+ 15.43%    6.006      2 Template:Navigation_menu_2
+ 13.81%    5.378      1 Template:Value
+ 12.03%    4.684      1 Template:Userdocnavi/fr
+  9.52%    3.708      1 Template:Version/fr
+  9.00%    3.503      2 Template:Docnav/fr
+  7.60%    2.957      1 Template:GuiCommand/fr
+  7.10%    2.765      1 Template:Caption
+  6.51%    2.533      3 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:278103-0!canonical and timestamp 20260125111337 and revision id 1743802. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:278103-0!canonical and timestamp 20260125111342 and revision id 1743805. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
