Updated page TechDraw ExtensionCreateLengthArc/fr

--- a/wiki/fr/TechDraw_ExtensionCreateLengthArc.html
+++ b/wiki/fr/TechDraw_ExtensionCreateLengthArc.html
@@ -52,10 +52,10 @@
 <td class="ctToc"><br><meta property="mw:PageProp/toc">
 </td></tr></tbody></table>
 <h2><span class="mw-headline" id="Description">Description</span></h2>
-<p>L'outil <b>TechDraw Longueur d'arc</b> cr&eacute;e une cote de longueur d'arc.
+<p>L'outil <b>TechDraw Cote de longueur d'arc</b> cr&eacute;e une cote de longueur d'arc.
 </p><p><span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionCreateLengthArcExample.png&amp;filetimestamp=20211121080719&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionCreateLengthArcExample.png" decoding="async" width="300" height="156" class="mw-file-element" data-file-width="587" data-file-height="306"></a></span>
 </p>
-<p style="text-align:left; font-style:italic; max-width:800px; box-sizing:border-box; margin-block:1em; margin-inline:clamp(1em, 6vw, 2em); padding-inline:clamp(0.75em, 4vw, 2em); word-break:normal; overflow-wrap:break-word;">A droite, la cote cr&eacute;&eacute;e</p>
+<p style="text-align:left; font-style:italic; max-width:800px; box-sizing:border-box; margin-block:1em; margin-inline:clamp(1em, 6vw, 2em); padding-inline:clamp(0.75em, 4vw, 2em); word-break:normal; overflow-wrap:break-word;">&Agrave; droite, les cotes cr&eacute;&eacute;es</p>
 <p><span id="Usage"></span>
 </p>
 <h2><span class="mw-headline" id="Utilisation">Utilisation</span></h2>
@@ -114,15 +114,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260125111342
+Cached time: 20260125111357
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.094 seconds
-Real time usage: 0.139 seconds
+CPU time usage: 0.098 seconds
+Real time usage: 0.173 seconds
 Preprocessor visited node count: 379/1000000
-Post&#8208;expand include size: 26560/2097152 bytes
-Template argument size: 10418/2097152 bytes
+Post&#8208;expand include size: 26568/2097152 bytes
+Template argument size: 10422/2097152 bytes
 Highest expansion depth: 6/100
 Expensive parser function count: 1/100
 Unstrip recursion depth: 0/20
@@ -130,19 +130,19 @@ Unstrip post&#8208;expand size: 1524/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   38.930      1 -total
- 21.51%    8.373      1 Template:TechDraw_Tools_navi/fr
- 15.43%    6.006      2 Template:Navigation_menu_2
- 13.81%    5.378      1 Template:Value
- 12.03%    4.684      1 Template:Userdocnavi/fr
-  9.52%    3.708      1 Template:Version/fr
-  9.00%    3.503      2 Template:Docnav/fr
-  7.60%    2.957      1 Template:GuiCommand/fr
-  7.10%    2.765      1 Template:Caption
-  6.51%    2.533      3 Template:MenuCommand
+100.00%   48.327      1 -total
+ 24.56%   11.870      1 Template:TechDraw_Tools_navi/fr
+ 16.98%    8.208      2 Template:Navigation_menu_2
+ 13.22%    6.389      1 Template:Userdocnavi/fr
+ 11.06%    5.345      2 Template:Docnav/fr
+  9.90%    4.783      1 Template:Value
+  8.67%    4.191      1 Template:GuiCommand/fr
+  7.52%    3.634      1 Template:Caption
+  7.12%    3.441      1 Template:Version/fr
+  6.27%    3.029      1 Template:VersionMinus/fr
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:278103-0!canonical and timestamp 20260125111342 and revision id 1743805. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:278103-0!canonical and timestamp 20260125111357 and revision id 1743809. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
