Updated page TechDraw ExtensionCreateLengthArc/fr

--- a/wiki/fr/TechDraw_ExtensionCreateLengthArc.html
+++ b/wiki/fr/TechDraw_ExtensionCreateLengthArc.html
@@ -1,7 +1,7 @@
 <link href="../site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">TechDraw ExtensionCreateLengthArc/fr</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="fr" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="../index.php?title=Special;Translate&amp;group=page-TechDraw+ExtensionCreateLengthArc&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
 <li><a href="../de/TechDraw_ExtensionCreateLengthArc.html" class="mw-pt-progress mw-pt-progress--complete" title="TechDraw Erg&auml;nzungBogenma&szlig; (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><a href="../TechDraw_ExtensionCreateLengthArc.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="TechDraw ExtensionCreateLengthArc (100% translated)" lang="en" dir="ltr">English</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="fr" dir="ltr">fran&ccedil;ais</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="fr" dir="ltr">fran&ccedil;ais</span></li>
 <li><a href="../it/TechDraw_ExtensionCreateLengthArc.html" class="mw-pt-progress mw-pt-progress--med" title="TechDraw&#720; Quota lunghezza arco (56% translated)" lang="it" dir="ltr">italiano</a></li>
 <li><a href="../pl/TechDraw_ExtensionCreateLengthArc.html" class="mw-pt-progress mw-pt-progress--complete" title="Rysunek Techniczny: Rozszerzenie Dodaj wymiar d&#322;ugo&#347;ci &#322;uku (100% translated)" lang="pl" dir="ltr">polski</a></li>
 <li><a href="../ko/TechDraw_ExtensionCreateLengthArc.html" class="mw-pt-progress mw-pt-progress--med" title="&#44592;&#49696;&#46020;&#47732; &#54840; &#44600;&#51060; &#52824;&#49688; (56% translated)" lang="ko" dir="ltr">&#54620;&#44397;&#50612;</a></li></ul></div>
@@ -59,14 +59,12 @@
 <p><span id="Usage"></span>
 </p>
 <h2><span class="mw-headline" id="Utilisation">Utilisation</span></h2>
-<div class="mw-translate-fuzzy">
-<ol><li>S&eacute;lectionner un seul arc de cercle.</li>
+<ol><li>S&eacute;lectionnez un seul arc de cercle.</li>
 <li>Il existe plusieurs fa&ccedil;ons de lancer l'outil&nbsp;:
 <ul><li><span style="font-size:small;"><a href="../fr/Release_notes_1.0.html" title="Release notes 1.0/fr">introduit dans la version 1.0</a></span>&nbsp;: si la <a href="../fr/TechDraw_Preferences.html#Cotes" title="TechDraw Preferences/fr">pr&eacute;f&eacute;rence</a> de l'<b>Outils de cotation</b> est r&eacute;gl&eacute;e sur <code>Outil unique</code> (par d&eacute;faut)&nbsp;: appuyez sur la fl&egrave;che vers le bas &agrave; droite du bouton <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;"><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=TechDraw_Dimension.svg&amp;filetimestamp=20241126214027&amp;.html" class="mw-file-description"><img src="../File/TechDraw_Dimension.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Toolbar_flyout_arrow.svg&amp;filetimestamp=20210802183935&amp;.html" class="mw-file-description"><img src="../File/Toolbar_flyout_arrow.svg" decoding="async" width="8" height="16" class="mw-file-element" data-file-width="32" data-file-height="64"></a></span></span> et s&eacute;lectionnez l'option <b><span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionCreateLengthArc.svg&amp;filetimestamp=20240706145221&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionCreateLengthArc.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Cote de longueur d'arc</b> du menu d&eacute;roulant.</li>
 <li>Si cette pr&eacute;f&eacute;rence a une valeur diff&eacute;rente (et dans <span style="font-size:small;color:blue;">version 0.21 et pr&eacute;c&eacute;dentes</span>)&nbsp;: appuyez sur le bouton <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;"><span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionCreateLengthArc.svg&amp;filetimestamp=20240706145221&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionCreateLengthArc.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a class="mw-selflink selflink">Cote de longueur d'arc</a></span>.</li>
-<li>S&eacute;lectionnez l'option <b>TechDraw &rarr; Extensions&nbsp;: cotes &rarr; <span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionCreateLengthArc.svg&amp;filetimestamp=20240706145221&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionCreateLengthArc.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Cote de longueur d'arc</b> du menu.</li></ul></li>
+<li>S&eacute;lectionnez l'option <b>TechDraw &rarr; Formater/organiser les cotes &rarr; <span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionCreateLengthArc.svg&amp;filetimestamp=20240706145221&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionCreateLengthArc.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Cote de longueur d'arc</b> du menu.</li></ul></li>
 <li>Une cote de longueur d'arc est cr&eacute;&eacute;e.</li></ol>
-</div>
 <p><br>
 </p>
 <div class="docnav">
@@ -114,35 +112,35 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260125111357
+Cached time: 20260125111431
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.098 seconds
-Real time usage: 0.173 seconds
-Preprocessor visited node count: 379/1000000
-Post&#8208;expand include size: 26568/2097152 bytes
-Template argument size: 10422/2097152 bytes
+CPU time usage: 0.092 seconds
+Real time usage: 0.135 seconds
+Preprocessor visited node count: 378/1000000
+Post&#8208;expand include size: 26578/2097152 bytes
+Template argument size: 10432/2097152 bytes
 Highest expansion depth: 6/100
 Expensive parser function count: 1/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 1524/5000000 bytes
+Unstrip post&#8208;expand size: 1528/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   48.327      1 -total
- 24.56%   11.870      1 Template:TechDraw_Tools_navi/fr
- 16.98%    8.208      2 Template:Navigation_menu_2
- 13.22%    6.389      1 Template:Userdocnavi/fr
- 11.06%    5.345      2 Template:Docnav/fr
-  9.90%    4.783      1 Template:Value
-  8.67%    4.191      1 Template:GuiCommand/fr
-  7.52%    3.634      1 Template:Caption
-  7.12%    3.441      1 Template:Version/fr
-  6.27%    3.029      1 Template:VersionMinus/fr
+100.00%   39.989      1 -total
+ 22.58%    9.030      1 Template:TechDraw_Tools_navi/fr
+ 16.01%    6.404      2 Template:Navigation_menu_2
+ 12.63%    5.052      1 Template:GuiCommand/fr
+ 12.06%    4.824      1 Template:Userdocnavi/fr
+ 10.38%    4.150      2 Template:Docnav/fr
+  9.33%    3.730      1 Template:Value
+  9.28%    3.710      1 Template:Caption
+  6.58%    2.631      1 Template:Version/fr
+  5.42%    2.168      1 Template:Incode
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:278103-0!canonical and timestamp 20260125111357 and revision id 1743809. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:278103-0!canonical and timestamp 20260125111431 and revision id 1743811. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
