Updated page TechDraw ExtensionInsertDiameter/fr

--- a/wiki/fr/TechDraw_ExtensionInsertDiameter.html
+++ b/wiki/fr/TechDraw_ExtensionInsertDiameter.html
@@ -13,18 +13,17 @@
  <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Workbench_TechDraw.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span></div>
 </div>
 </div>
-<div class="mw-translate-fuzzy">
 <table class="fcinfobox wikitable ct" width="100%" style="float: right; width: 230px; margin-left: 1em">
 <tbody><tr>
 <td class="ctTitle" style="font-weight: bold; font-size: 125%;">
-<p><span class="mw-default-size" typeof="mw:File"><span><img src="../File/TechDraw_ExtensionInsertDiameter.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span><span> </span>TechDraw Diam&egrave;tre
+<p><span class="mw-default-size" typeof="mw:File"><span><img src="../File/TechDraw_ExtensionInsertDiameter.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span><span> </span>TechDraw Cote de diam&egrave;tre
 </p>
 </td></tr>
 <tr>
 <th class="ctOdd">Emplacement du menu
 </th></tr>
 <tr>
-<td class="ctEven">TechDraw &rarr; Extensions&nbsp;: cotes &rarr; Ins&eacute;rer le pr&eacute;fixe "&#8960;"
+<td class="ctEven">TechDraw &rarr; Formater/organiser les cotes &rarr; Ins&eacute;rer le pr&eacute;fixe &laquo;&nbsp;&#8960;&nbsp;&raquo;
 </td></tr>
 <tr>
 <th class="ctOdd">Ateliers
@@ -53,7 +52,6 @@
 <tr>
 <td class="ctToc"><br><meta property="mw:PageProp/toc">
 </td></tr></tbody></table>
-</div>
 <h2><span class="mw-headline" id="Description">Description</span></h2>
 <p>L'outil <b>TechDraw Diam&egrave;tre</b> ins&egrave;re un symbole "&#8960;" au d&eacute;but du texte de la cote.
 </p><p><span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionInsertDiameterExample.png&amp;filetimestamp=20211116164132&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionInsertDiameterExample.png" decoding="async" width="600" height="132" class="mw-file-element" data-file-width="1017" data-file-height="224"></a></span>
@@ -118,15 +116,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260125111752
+Cached time: 20260125111846
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.082 seconds
-Real time usage: 0.222 seconds
-Preprocessor visited node count: 350/1000000
-Post&#8208;expand include size: 25782/2097152 bytes
-Template argument size: 10194/2097152 bytes
+CPU time usage: 0.080 seconds
+Real time usage: 0.112 seconds
+Preprocessor visited node count: 349/1000000
+Post&#8208;expand include size: 25826/2097152 bytes
+Template argument size: 10238/2097152 bytes
 Highest expansion depth: 6/100
 Expensive parser function count: 1/100
 Unstrip recursion depth: 0/20
@@ -134,18 +132,18 @@ Unstrip post&#8208;expand size: 1345/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   53.538      1 -total
- 28.34%   15.175      1 Template:TechDraw_Tools_navi/fr
- 15.11%    8.087      1 Template:GuiCommand/fr
- 14.01%    7.500      1 Template:Userdocnavi/fr
- 13.48%    7.217      1 Template:Caption
- 11.31%    6.057      2 Template:Docnav/fr
- 10.94%    5.858      2 Template:Navigation_menu_2
-  8.15%    4.365      1 Template:MenuCommand
-  7.93%    4.245      1 Template:Button
+100.00%   25.049      1 -total
+ 28.90%    7.240      1 Template:TechDraw_Tools_navi/fr
+ 21.50%    5.386      2 Template:Navigation_menu_2
+ 17.75%    4.446      1 Template:Userdocnavi/fr
+ 11.29%    2.828      1 Template:GuiCommand/fr
+ 10.26%    2.569      1 Template:MenuCommand
+ 10.23%    2.562      2 Template:Docnav/fr
+  9.36%    2.345      1 Template:Caption
+  9.35%    2.343      1 Template:Button
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:278113-0!canonical and timestamp 20260125111752 and revision id 1733911. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:278113-0!canonical and timestamp 20260125111846 and revision id 1743814. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
