Updated page TechDraw ExtensionInsertDiameter/fr

--- a/wiki/fr/TechDraw_ExtensionInsertDiameter.html
+++ b/wiki/fr/TechDraw_ExtensionInsertDiameter.html
@@ -53,7 +53,7 @@
 <td class="ctToc"><br><meta property="mw:PageProp/toc">
 </td></tr></tbody></table>
 <h2><span class="mw-headline" id="Description">Description</span></h2>
-<p>L'outil <b>TechDraw Diam&egrave;tre</b> ins&egrave;re un symbole "&#8960;" au d&eacute;but du texte de la cote.
+<p>L'outil <b>TechDraw Cote de diam&egrave;tre</b> ins&egrave;re un symbole &laquo;&nbsp;&#8960;&nbsp;&raquo; au d&eacute;but du texte de la cote.
 </p><p><span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionInsertDiameterExample.png&amp;filetimestamp=20211116164132&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionInsertDiameterExample.png" decoding="async" width="600" height="132" class="mw-file-element" data-file-width="1017" data-file-height="224"></a></span>
 </p>
 <p style="text-align:left; font-style:italic; max-width:800px; box-sizing:border-box; margin-block:1em; margin-inline:clamp(1em, 6vw, 2em); padding-inline:clamp(0.75em, 4vw, 2em); word-break:normal; overflow-wrap:break-word;">A droite, les cotes avec le symbole ins&eacute;r&eacute;</p>
@@ -116,12 +116,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260125111846
+Cached time: 20260125111935
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.080 seconds
-Real time usage: 0.112 seconds
+CPU time usage: 0.098 seconds
+Real time usage: 0.136 seconds
 Preprocessor visited node count: 349/1000000
 Post&#8208;expand include size: 25826/2097152 bytes
 Template argument size: 10238/2097152 bytes
@@ -132,18 +132,18 @@ Unstrip post&#8208;expand size: 1345/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   25.049      1 -total
- 28.90%    7.240      1 Template:TechDraw_Tools_navi/fr
- 21.50%    5.386      2 Template:Navigation_menu_2
- 17.75%    4.446      1 Template:Userdocnavi/fr
- 11.29%    2.828      1 Template:GuiCommand/fr
- 10.26%    2.569      1 Template:MenuCommand
- 10.23%    2.562      2 Template:Docnav/fr
-  9.36%    2.345      1 Template:Caption
-  9.35%    2.343      1 Template:Button
+100.00%   34.137      1 -total
+ 24.72%    8.438      1 Template:GuiCommand/fr
+ 20.65%    7.050      1 Template:TechDraw_Tools_navi/fr
+ 14.30%    4.881      2 Template:Navigation_menu_2
+ 12.20%    4.165      1 Template:Caption
+ 12.14%    4.146      1 Template:Userdocnavi/fr
+ 10.09%    3.444      1 Template:Button
+  9.82%    3.352      2 Template:Docnav/fr
+  8.13%    2.775      1 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:278113-0!canonical and timestamp 20260125111846 and revision id 1743814. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:278113-0!canonical and timestamp 20260125111935 and revision id 1743816. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
