--- a/wiki/fr/TechDraw_ExtensionInsertDiameter.html
+++ b/wiki/fr/TechDraw_ExtensionInsertDiameter.html
@@ -56,7 +56,7 @@
 <p>L'outil <b>TechDraw Cote de diam&egrave;tre</b> ins&egrave;re un symbole &laquo;&nbsp;&#8960;&nbsp;&raquo; au d&eacute;but du texte de la cote.
 </p><p><span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionInsertDiameterExample.png&amp;filetimestamp=20211116164132&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionInsertDiameterExample.png" decoding="async" width="600" height="132" class="mw-file-element" data-file-width="1017" data-file-height="224"></a></span>
 </p>
-<p style="text-align:left; font-style:italic; max-width:800px; box-sizing:border-box; margin-block:1em; margin-inline:clamp(1em, 6vw, 2em); padding-inline:clamp(0.75em, 4vw, 2em); word-break:normal; overflow-wrap:break-word;">A droite, les cotes avec le symbole ins&eacute;r&eacute;</p>
+<p style="text-align:left; font-style:italic; max-width:800px; box-sizing:border-box; margin-block:1em; margin-inline:clamp(1em, 6vw, 2em); padding-inline:clamp(0.75em, 4vw, 2em); word-break:normal; overflow-wrap:break-word;">&Agrave; droite, les cotes avec le symbole ins&eacute;r&eacute;</p>
 <p><span id="Usage"></span>
 </p>
 <h2><span class="mw-headline" id="Utilisation">Utilisation</span></h2>
@@ -116,15 +116,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260125111935
+Cached time: 20260125111949
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.098 seconds
-Real time usage: 0.136 seconds
+CPU time usage: 0.072 seconds
+Real time usage: 0.184 seconds
 Preprocessor visited node count: 349/1000000
-Post&#8208;expand include size: 25826/2097152 bytes
-Template argument size: 10238/2097152 bytes
+Post&#8208;expand include size: 25828/2097152 bytes
+Template argument size: 10239/2097152 bytes
 Highest expansion depth: 6/100
 Expensive parser function count: 1/100
 Unstrip recursion depth: 0/20
@@ -132,18 +132,18 @@ Unstrip post&#8208;expand size: 1345/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   34.137      1 -total
- 24.72%    8.438      1 Template:GuiCommand/fr
- 20.65%    7.050      1 Template:TechDraw_Tools_navi/fr
- 14.30%    4.881      2 Template:Navigation_menu_2
- 12.20%    4.165      1 Template:Caption
- 12.14%    4.146      1 Template:Userdocnavi/fr
- 10.09%    3.444      1 Template:Button
-  9.82%    3.352      2 Template:Docnav/fr
-  8.13%    2.775      1 Template:MenuCommand
+100.00%   59.329      1 -total
+ 41.44%   24.584      1 Template:TechDraw_Tools_navi/fr
+ 28.52%   16.920      2 Template:Navigation_menu_2
+ 17.14%   10.169      1 Template:GuiCommand/fr
+ 15.08%    8.947      2 Template:Docnav/fr
+  9.69%    5.747      1 Template:Userdocnavi/fr
+  5.53%    3.281      1 Template:MenuCommand
+  5.39%    3.195      1 Template:Button
+  4.61%    2.736      1 Template:Caption
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:278113-0!canonical and timestamp 20260125111935 and revision id 1743816. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:278113-0!canonical and timestamp 20260125111949 and revision id 1743818. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
