--- a/wiki/fr/TechDraw_ExtensionInsertDiameter.html
+++ b/wiki/fr/TechDraw_ExtensionInsertDiameter.html
@@ -1,7 +1,7 @@
 <link href="../site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">TechDraw ExtensionInsertDiameter/fr</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="fr" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="../index.php?title=Special;Translate&amp;group=page-TechDraw+ExtensionInsertDiameter&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
 <li><a href="../de/TechDraw_ExtensionInsertDiameter.html" class="mw-pt-progress mw-pt-progress--complete" title="TechDraw Erg&auml;nzungDurchmesserEinf&uuml;gen (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><a href="../TechDraw_ExtensionInsertDiameter.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="TechDraw ExtensionInsertDiameter (100% translated)" lang="en" dir="ltr">English</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--med" lang="fr" dir="ltr">fran&ccedil;ais</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="fr" dir="ltr">fran&ccedil;ais</span></li>
 <li><a href="../pl/TechDraw_ExtensionInsertDiameter.html" class="mw-pt-progress mw-pt-progress--complete" title='Rysunek Techniczny: Rozszerzenie Dodaj przedrostek "&#8960;" (100% translated)' lang="pl" dir="ltr">polski</a></li>
 <li><a href="../ko/TechDraw_ExtensionInsertDiameter.html" class="mw-pt-progress mw-pt-progress--med" title="&#44592;&#49696;&#46020;&#47732; &#51648;&#47492; &#44592;&#54840; &#49341;&#51077; (56% translated)" lang="ko" dir="ltr">&#54620;&#44397;&#50612;</a></li></ul></div>
 <div class="mw-translate-fuzzy">
@@ -60,13 +60,11 @@
 <p><span id="Usage"></span>
 </p>
 <h2><span class="mw-headline" id="Utilisation">Utilisation</span></h2>
-<div class="mw-translate-fuzzy">
 <ol><li>S&eacute;lectionnez une ou plusieurs cotes.</li>
 <li>Il existe plusieurs fa&ccedil;ons de lancer l'outil&nbsp;:
-<ul><li>Appuyez sur le bouton <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;"><span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionInsertDiameter.svg&amp;filetimestamp=20240706152033&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionInsertDiameter.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a class="mw-selflink selflink">Ins&eacute;rer le pr&eacute;fixe "&#8960;"</a></span>.</li>
-<li>S&eacute;lectionnez la commande <b>TechDraw &rarr; Extensions&nbsp;: cotes &rarr; <span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionInsertDiameter.svg&amp;filetimestamp=20240706152033&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionInsertDiameter.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Ins&eacute;rer un pr&eacute;fixe "&#8960;"</b> &agrave; partir du menu.</li></ul></li>
+<ul><li>Appuyez sur le bouton <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;"><span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionInsertDiameter.svg&amp;filetimestamp=20240706152033&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionInsertDiameter.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a class="mw-selflink selflink">Ins&eacute;rer le pr&eacute;fixe &laquo;&nbsp;&#8960;&nbsp;&raquo;</a></span>.</li>
+<li>S&eacute;lectionnez l'option <b>TechDraw &rarr; Formater/organiser les cotes &rarr; <span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionInsertDiameter.svg&amp;filetimestamp=20240706152033&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionInsertDiameter.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Ins&eacute;rer le pr&eacute;fixe &laquo;&nbsp;&#8960;&nbsp;&raquo;</b> du menu.</li></ul></li>
 <li>Le symbole "&#8960;" est ins&eacute;r&eacute; dans le texte de cote des cotes s&eacute;lectionn&eacute;es.</li></ol>
-</div>
 <p><br>
 </p>
 <div class="mw-translate-fuzzy">
@@ -116,34 +114,34 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260125111949
+Cached time: 20260125112052
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.072 seconds
-Real time usage: 0.184 seconds
-Preprocessor visited node count: 349/1000000
-Post&#8208;expand include size: 25828/2097152 bytes
-Template argument size: 10239/2097152 bytes
+CPU time usage: 0.078 seconds
+Real time usage: 0.124 seconds
+Preprocessor visited node count: 348/1000000
+Post&#8208;expand include size: 25846/2097152 bytes
+Template argument size: 10257/2097152 bytes
 Highest expansion depth: 6/100
 Expensive parser function count: 1/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 1345/5000000 bytes
+Unstrip post&#8208;expand size: 1346/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   59.329      1 -total
- 41.44%   24.584      1 Template:TechDraw_Tools_navi/fr
- 28.52%   16.920      2 Template:Navigation_menu_2
- 17.14%   10.169      1 Template:GuiCommand/fr
- 15.08%    8.947      2 Template:Docnav/fr
-  9.69%    5.747      1 Template:Userdocnavi/fr
-  5.53%    3.281      1 Template:MenuCommand
-  5.39%    3.195      1 Template:Button
-  4.61%    2.736      1 Template:Caption
+100.00%   40.397      1 -total
+ 35.53%   14.354      1 Template:GuiCommand/fr
+ 27.95%   11.289      1 Template:TechDraw_Tools_navi/fr
+ 19.06%    7.699      2 Template:Navigation_menu_2
+ 10.87%    4.392      1 Template:Userdocnavi/fr
+  7.97%    3.221      2 Template:Docnav/fr
+  7.78%    3.143      1 Template:Caption
+  4.02%    1.624      1 Template:Button
+  4.01%    1.621      1 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:278113-0!canonical and timestamp 20260125111949 and revision id 1743818. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:278113-0!canonical and timestamp 20260125112052 and revision id 1743820. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
