Updated page TechDraw ExtensionInsertDiameter/fr

--- a/wiki/fr/TechDraw_ExtensionInsertDiameter.html
+++ b/wiki/fr/TechDraw_ExtensionInsertDiameter.html
@@ -67,14 +67,12 @@
 <li>Le symbole "&#8960;" est ins&eacute;r&eacute; dans le texte de cote des cotes s&eacute;lectionn&eacute;es.</li></ol>
 <p><br>
 </p>
-<div class="mw-translate-fuzzy">
 <div class="docnav">
-    <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-left.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <span class="mw-default-size" typeof="mw:File"><span><img src="../File/TechDraw_ExtensionLinePerpendicular.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../fr/TechDraw_ExtensionLinePerpendicular.html" title="TechDraw ExtensionLinePerpendicular/fr">Ligne perpendiculaire</a></div>
+    <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-left.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <span class="mw-default-size" typeof="mw:File"><span><img src="../File/TechDraw_ExtensionCreateLengthArc.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../fr/TechDraw_ExtensionCreateLengthArc.html" title="TechDraw ExtensionCreateLengthArc/fr">Cote de longueur d'arc</a></div>
     <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/TechDraw_ExtensionInsertSquare.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../fr/TechDraw_ExtensionInsertSquare.html" title="TechDraw ExtensionInsertSquare/fr">Section tube</a>
  <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-right.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span></div>
     <div><a href="../fr/TechDraw_Workbench.html" title="TechDraw Workbench/fr">Atelier TechDraw</a>
  <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Workbench_TechDraw.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span></div>
-</div>
 </div>
 <div class="NavFrame" style="margin: 0px; text-align: center; border-collapse: collapse; font-size: 100%; border-top-style: double; border-top-style: 1px; clear:both;">
     <div class="NavHead mw-collapsible mw-collapsed" style="margin: 1px; font-weight: normal; background-color: var(--background-color-neutral-subtle, #fefefe);"><span typeof="mw:File"><a href="../index.php?title=Workbench_TechDraw.svg&amp;filetimestamp=20240713144548&amp;.html" class="mw-file-description"><img src="../File/Workbench_TechDraw.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../fr/TechDraw_Workbench.html" title="TechDraw Workbench/fr">TechDraw</a>
@@ -114,15 +112,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260125112052
+Cached time: 20260125112243
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.078 seconds
-Real time usage: 0.124 seconds
-Preprocessor visited node count: 348/1000000
-Post&#8208;expand include size: 25846/2097152 bytes
-Template argument size: 10257/2097152 bytes
+CPU time usage: 0.081 seconds
+Real time usage: 0.111 seconds
+Preprocessor visited node count: 347/1000000
+Post&#8208;expand include size: 25837/2097152 bytes
+Template argument size: 10251/2097152 bytes
 Highest expansion depth: 6/100
 Expensive parser function count: 1/100
 Unstrip recursion depth: 0/20
@@ -130,18 +128,18 @@ Unstrip post&#8208;expand size: 1346/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   40.397      1 -total
- 35.53%   14.354      1 Template:GuiCommand/fr
- 27.95%   11.289      1 Template:TechDraw_Tools_navi/fr
- 19.06%    7.699      2 Template:Navigation_menu_2
- 10.87%    4.392      1 Template:Userdocnavi/fr
-  7.97%    3.221      2 Template:Docnav/fr
-  7.78%    3.143      1 Template:Caption
-  4.02%    1.624      1 Template:Button
-  4.01%    1.621      1 Template:MenuCommand
+100.00%   21.819      1 -total
+ 30.85%    6.730      1 Template:TechDraw_Tools_navi/fr
+ 25.34%    5.528      2 Template:Navigation_menu_2
+ 22.30%    4.865      1 Template:Userdocnavi/fr
+ 13.68%    2.985      1 Template:GuiCommand/fr
+ 13.31%    2.905      2 Template:Docnav/fr
+  7.49%    1.634      1 Template:Caption
+  5.09%    1.111      1 Template:Button
+  4.61%    1.006      1 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:278113-0!canonical and timestamp 20260125112052 and revision id 1743820. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:278113-0!canonical and timestamp 20260125112243 and revision id 1743822. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
