--- a/wiki/fr/TechDraw_ExtensionInsertDiameter.html
+++ b/wiki/fr/TechDraw_ExtensionInsertDiameter.html
@@ -1,17 +1,15 @@
 <link href="../site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">TechDraw ExtensionInsertDiameter/fr</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="fr" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="../index.php?title=Special;Translate&amp;group=page-TechDraw+ExtensionInsertDiameter&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
 <li><a href="../de/TechDraw_ExtensionInsertDiameter.html" class="mw-pt-progress mw-pt-progress--complete" title="TechDraw Erg&auml;nzungDurchmesserEinf&uuml;gen (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><a href="../TechDraw_ExtensionInsertDiameter.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="TechDraw ExtensionInsertDiameter (100% translated)" lang="en" dir="ltr">English</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="fr" dir="ltr">fran&ccedil;ais</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="fr" dir="ltr">fran&ccedil;ais</span></li>
 <li><a href="../pl/TechDraw_ExtensionInsertDiameter.html" class="mw-pt-progress mw-pt-progress--complete" title='Rysunek Techniczny: Rozszerzenie Dodaj przedrostek "&#8960;" (100% translated)' lang="pl" dir="ltr">polski</a></li>
 <li><a href="../ko/TechDraw_ExtensionInsertDiameter.html" class="mw-pt-progress mw-pt-progress--med" title="&#44592;&#49696;&#46020;&#47732; &#51648;&#47492; &#44592;&#54840; &#49341;&#51077; (56% translated)" lang="ko" dir="ltr">&#54620;&#44397;&#50612;</a></li></ul></div>
-<div class="mw-translate-fuzzy">
 <div class="docnav">
-    <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-left.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <span class="mw-default-size" typeof="mw:File"><span><img src="../File/TechDraw_ExtensionLinePerpendicular.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../fr/TechDraw_ExtensionLinePerpendicular.html" title="TechDraw ExtensionLinePerpendicular/fr">Ligne perpendiculaire</a></div>
+    <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-left.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <span class="mw-default-size" typeof="mw:File"><span><img src="../File/TechDraw_ExtensionCreateLengthArc.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../fr/TechDraw_ExtensionCreateLengthArc.html" title="TechDraw ExtensionCreateLengthArc/fr">Cote de longueur d'arc</a></div>
     <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/TechDraw_ExtensionInsertSquare.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../fr/TechDraw_ExtensionInsertSquare.html" title="TechDraw ExtensionInsertSquare/fr">Section tube</a>
  <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-right.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span></div>
     <div><a href="../fr/TechDraw_Workbench.html" title="TechDraw Workbench/fr">Atelier TechDraw</a>
  <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Workbench_TechDraw.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span></div>
-</div>
 </div>
 <table class="fcinfobox wikitable ct" width="100%" style="float: right; width: 230px; margin-left: 1em">
 <tbody><tr>
@@ -112,34 +110,34 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260125112243
+Cached time: 20260125112250
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.081 seconds
-Real time usage: 0.111 seconds
-Preprocessor visited node count: 347/1000000
-Post&#8208;expand include size: 25837/2097152 bytes
-Template argument size: 10251/2097152 bytes
+CPU time usage: 0.068 seconds
+Real time usage: 0.088 seconds
+Preprocessor visited node count: 346/1000000
+Post&#8208;expand include size: 25828/2097152 bytes
+Template argument size: 10245/2097152 bytes
 Highest expansion depth: 6/100
 Expensive parser function count: 1/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 1346/5000000 bytes
+Unstrip post&#8208;expand size: 1350/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   21.819      1 -total
- 30.85%    6.730      1 Template:TechDraw_Tools_navi/fr
- 25.34%    5.528      2 Template:Navigation_menu_2
- 22.30%    4.865      1 Template:Userdocnavi/fr
- 13.68%    2.985      1 Template:GuiCommand/fr
- 13.31%    2.905      2 Template:Docnav/fr
-  7.49%    1.634      1 Template:Caption
-  5.09%    1.111      1 Template:Button
-  4.61%    1.006      1 Template:MenuCommand
+100.00%   19.629      1 -total
+ 33.09%    6.495      1 Template:TechDraw_Tools_navi/fr
+ 23.18%    4.550      2 Template:Navigation_menu_2
+ 17.89%    3.511      1 Template:Userdocnavi/fr
+ 14.59%    2.863      2 Template:Docnav/fr
+ 13.41%    2.632      1 Template:GuiCommand/fr
+  7.48%    1.468      1 Template:Caption
+  5.50%    1.080      1 Template:Button
+  5.34%    1.048      1 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:278113-0!canonical and timestamp 20260125112243 and revision id 1743822. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:278113-0!canonical and timestamp 20260125112250 and revision id 1743824. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
